kubernetes/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.1.4
          ports:
            - containerPort: 8080
          args:
            - start-dev
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  exec 3<>/dev/tcp/127.0.0.1/8080; \
                  echo -e 'GET /health/ready HTTP/1.1\r\nhost: http://localhost\r\nConnection: close\r\n\r\n' >&3; \
                  if [ $? -eq 0 ]; then \
                    echo 'Healthcheck Successful'; \
                    exit 0; \
                  else \
                    echo 'Healthcheck Failed'; \
                    exit 1; \
                  fi
            initialDelaySeconds: 40
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: keycloak-data
              mountPath: /opt/keycloak/data
      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-pvc
      restartPolicy: Always
